--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -13,6 +13,8 @@
   @@include('../blocks/section-8.html')
   @@include('../blocks/section-9.html')
   @@include('../blocks/section-10.html')
+  @@include('../blocks/section-11.html')
+  @@include('../blocks/section-12.html')
   
   <!-- здесь блоки Алима -->
   
