added section-15. Deleted section map

--- a/app/html/blocks/section-15.html
+++ b/app/html/blocks/section-15.html
@@ -1,11 +1,35 @@
-<section class="section-15">
+<section class="section-16 _section">
   <div class="container">
-    <h2 class="section-15__title _title">
-      <span>Наши лестницы установлены от
-      Мурманска</span> <br>до Сочи и от Финляндии до Салехарда
+    <h2 class="section-16__title _title">
+      За <span>7 шагов</span> построим надежную <br>и
+      безопасную лестницу
     </h2>
-    <div class="section-15__inner">
-      Content
+    <p class="section-16__subtitle _subtitle">
+      с учетом всех особенностей вашего помещения
+    </p>
+    <div class="section-16__steps">
+      <div class="section-16__step">
+        <div class="section-16__step-pin step-pin">
+          <div class="step-pin__num"></div>
+          <p class="step-pin__title"></p>
+        </div>
+        <div class="section-16__step-left">
+          <p class="section-16__step-text">
+            <strong>Наш менеджер свяжется с вами</strong> для
+            уточнения деталей заказа и сделает
+            коммерческое предложение с ориентировочной стоимостью и сроками изготовления лестницы.
+          </p>
+        </div>
+        <form class="section-16__form form-submit" action="#" method="POST" enctype="multipart/form-data">
+          <input type="hidden" name="from" value="Оставить заявку через форму на сайте">
+          <input type="hidden" name="newToken" value="<?php echo (rand(10000, 99999)) ?>">
+          <div class="section-16__form"></div>
+          <input class="section-16__form-tel _input" type="tel" placeholder="Номер телефона">
+          <button type="submit" class="section-16__form-btn _main-btn">
+
+          </button>
+        </form>
+      </div>
     </div>
   </div>
 </section>
