change mistakes in section 11, 12

--- a/app/html/blocks/section-13.html
+++ b/app/html/blocks/section-13.html
@@ -14,7 +14,7 @@
         ценами актуальными на <span>6 сентября</span>
       </h3>
       <div class="section-13__form-row relative">
-        <input class="section-13__form-tel _input" type="tel" placeholder="Номер телефона">
+        <input class="section-13__form-tel _input" type="tel" placeholder="Номер телефона" name="phone">
         <button type="submit" class="section-13__form-btn _main-btn">
           Получить подборку проектов
         </button>
