--- a/app/html/blocks/section-11.html
+++ b/app/html/blocks/section-11.html
@@ -1,126 +1,127 @@
-<section class="section-11 relative">
-    <img class="section-11__img _img" src="../../images/section-11-bg.webp" alt="">
-    <div class="container">
-        <div class="section-11__inner ">
-            <div class="section-11__rigth">
-                <h2 class="section-11__title _title relative">
-                    <span> Закажите выезд</span> <br>
-                    инженера на замер
-                </h2>
-                <p class="section-11__subtitle  relative">
-                    К вам приедет инженер <br>
-                    с которым вы можете:
-                </p>
-                <div class="section-11__items">
-                    <div class="section-11__item">
-                        <div class="section-11__item-point relative">
-                            01
-                        </div>
-                        <p class="section-11__item-text relative">
-                            выбрать тип и форму лестницы
-                        </p>
-                    </div>
-                    <div class="section-11__item">
-                        <div class="section-11__item-point relative">
-                            02
-                        </div>
-                        <p class="section-11__item-text relative">
-                            Получить экспертный совет по оптимальным решениям для вашего помещения
-                        </p>
-                    </div>
-                    <div class="section-11__item">
-                        <div class="section-11__item-point relative">
-                            03
-                        </div>
-                        <p class="section-11__item-text relative">
-                            Узнать про особенности монтажа вашей лестницы
-
-                        </p>
-                    </div>
-                    <div class="section-11__item">
-                        <div class="section-11__item-point relative">
-                            04
-                        </div>
-                        <p class="section-11__item-text relative">
-                            Определиться с цветом и материалами
-                            вашей будущей лестницы
-
-                        </p>
-                    </div>
-                    <div class="section-11__item">
-                        <div class="section-11__item-point relative">
-                            05
-                        </div>
-                        <p class="section-11__item-text relative">
-                            Возможность скорректировать проект с учетом бюджета
-                        </p>
-                    </div>
-                </div>
-                <div class="section-11__info relative">
-                    <div class="section-11__cont">
-                        <div class="section-11__cont-svg">
-                            <!-- @@include('../../images/icons/scales.svg') -->
-                        </div>
-                        <p class="section-11__cont-text ">
-                            <span> После замера сделаем точный расчетв</span>
-                            3х ценовых категориях и уточним сроки
-                            производства вашей лестницы
-                        </p>
-                    </div>
-                    <div class="section-11__cont">
-                        <div class="section-11__cont-svg">
-                            <!-- @@include('../../images/icons/chart.svg') -->
-                        </div>
-                        <p class="section-11__cont-text ">
-                            <span> Четкое представление о следующих шагах</span>
-                            для реализации проекта
-                        </p>
-                    </div>
-                </div>
+<section class="section-11">
+  <div class="container">
+    <div class="section-11__inner">
+      <div class="section-11__right">
+        <h2 class="section-11__title _title-light">
+          <span> Закажите выезд</span> <br>
+          инженера на замер
+        </h2>
+        <p class="section-11__subtitle">
+          К вам приедет инженер <br>
+          с которым вы можете:
+        </p>
+        <div class="section-11__items">
+          <div class="section-11__item">
+            <div class="section-11__item-point">
+              01
             </div>
-            <div class="section-11__left relative">
-                <h3 class="section-11__left-title relative">
-                    Закажите выезд инженера на замер
-                </h3>
-                <p class="section-11__left-subtitle relative">
-                    Возможен выезд на замер по выходным и в вечернее время
-                </p>
-                <div class="section-11__left-text relative">
-                    <!-- @@include('../../images/icons/time-black.svg') -->
-                    Замер займет от <span>45</span> до <span>60</span> минут
-                </div>
-                <form class="section-11__form relative" class action="">
-                    <input placeholder="Имя" class="section-11__form-input _input" type="text">
-                    <input placeholder="Телефон" class="section-11__form-input _input" type="number">
-                    <button type="submit" class="section-11__from-btn _main-btn">
-                        заказать
-                    </button>
-
-                    <label class="section-11__checkbox-block checkbox-block">
-                        <input type="checkbox" name="access" required checked>
-                        <span>
-                            @@include('../../images/icons/check.svg')
-                        </span>
-                        <p>
-                            Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики
-                                конфиденциальности</a>
-                        </p>
-                    </label>
-
-                    <hr>
-
-
-                    <div class="section-11__form-phone">
-                        @@include('../../images/icons/phone.svg')
-                        <a class="section-11__form-link" href="tel:+74997034656">
-                            <span>Или звоните:</span> +7 (499) 703-46-56
-                        </a>
-                    </div>
-
-
-
-                </form>
+            <p class="section-11__item-text">
+              выбрать тип и форму лестницы
+            </p>
+          </div>
+          <div class="section-11__item">
+            <div class="section-11__item-point">
+              02
             </div>
+            <p class="section-11__item-text">
+              Получить экспертный совет по оптимальным решениям для вашего помещения
+            </p>
+          </div>
+          <div class="section-11__item">
+            <div class="section-11__item-point">
+              03
+            </div>
+            <p class="section-11__item-text">
+              Узнать про особенности монтажа вашей лестницы
+            </p>
+          </div>
+          <div class="section-11__item">
+            <div class="section-11__item-point">
+              04
+            </div>
+            <p class="section-11__item-text">
+              Определиться с цветом и материалами
+              вашей будущей лестницы
+
+            </p>
+          </div>
+          <div class="section-11__item">
+            <div class="section-11__item-point">
+              05
+            </div>
+            <p class="section-11__item-text">
+              Возможность скорректировать проект с учетом бюджета
+            </p>
+          </div>
         </div>
+        <div class="section-11__info">
+          <div class="section-11__descr">
+            <div class="section-11__descr-left">
+              @@include('../../images/icons/scales.svg')
+            </div>
+            <p class="section-11__descr-text ">
+              <span> После замера сделаем точный расчет в</span>
+              3х ценовых категориях и уточним сроки
+              производства вашей лестницы
+            </p>
+          </div>
+          <div class="section-11__descr">
+            <div class="section-11__descr-left">
+              @@include('../../images/icons/chart.svg')
+            </div>
+            <p class="section-11__descr-text ">
+              <span> Четкое представление о следующих шагах</span>
+              для реализации проекта
+            </p>
+          </div>
+        </div>
+      </div>
+      <form class="section-11__form form-submit" action="#" method="POST" enctype="multipart/form-data">
+        <input type="hidden" name="from" value="Получить подборку проектов">
+        <input type="hidden" name="newToken" value="<?php echo (rand(10000, 99999)) ?>">
+        <h3 class="section-11__form-title">
+          Закажите выезд инженера на замер
+        </h3>
+        <p class="section-11__form-subtitle">
+          Возможен выезд на замер по выходным и в вечернее время
+        </p>
+        <div class="section-11__form-info">
+          @@include('../../images/icons/timer.svg')
+          <p class="section-11__form-text">
+            Замер займет от <span>45</span> до <span>60</span> минут
+          </p>
+        </div>
+        <div class="section-11__form-inner">
+          <input class="section-11__form-input _input" type="text" placeholder="Имя" name="name">
+          <input class="section-11__form-input _input" type="number" placeholder="Номер телефона" name="phone">
+          <button type="submit" class="section-11__from-btn _main-btn">
+            заказать
+          </button>
+          <label class="section-11__checkbox-block checkbox-block">
+            <input type="checkbox" name="access" required checked>
+            <span>
+              @@include('../../images/icons/check.svg')
+            </span>
+            <p>
+              Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики
+                конфиденциальности</a>
+            </p>
+          </label>
+
+          <hr>
+
+
+          <div class="section-11__form-phone">
+            @@include('../../images/icons/phone.svg')
+            <a class="section-11__form-link" href="tel:+74997034656">
+              <strong>Или звоните:</strong> +7 (499) 703-46-56
+            </a>
+          </div>
+
+
+
+        </div>
+      </form>
     </div>
+  </div>
 </section>
