--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -18,8 +18,7 @@
   @@include('../blocks/section-13.html')
   @@include('../blocks/section-14.html')
   @@include('../blocks/section-15.html')
-
-  @@include('../blocks/guarantee.html')
+  @@include('../blocks/section-16.html')
 
 
 
