--- a/app/index.html
+++ b/app/index.html
@@ -2901,72 +2901,135 @@
     </div>
   </div>
 </section>
+  <section class="section-16">
+  <div class="container">
+    <h1 class="section-16__title _title">
+      <span> Берем на себя гарантии и прописываем </span> <br>их в договоре:
+    </h1>
+    <div class="coursor visible-hand">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 300" height="42" width="42">
+        <rect class="tooltip-horizontal-scroll-icon_card" x="480" width="200" height="200" rx="5"
+          fill="rgba(190,190,190,0.3)"></rect>
+        <rect class="tooltip-horizontal-scroll-icon_card" y="0" width="200" height="200" rx="5"
+          fill="rgba(190,190,190,0.3)"></rect>
+        <rect class="tooltip-horizontal-scroll-icon_card" x="240" width="200" height="200" rx="5"
+          fill="rgba(190,190,190,0.3)"></rect>
+        <path class="tooltip-horizontal-scroll-icon_hand"
+          d="M78.9579 285.7C78.9579 285.7 37.8579 212.5 20.5579 180.8C-2.44209 138.6 -6.2422 120.8 9.6579 112C19.5579 106.5 33.2579 108.8 41.6579 123.4L61.2579 154.6V32.3C61.2579 32.3 60.0579 0 83.0579 0C107.558 0 105.458 32.3 105.458 32.3V91.7C105.458 91.7 118.358 82.4 133.458 86.6C141.158 88.7 150.158 92.4 154.958 104.6C154.958 104.6 185.658 89.7 200.958 121.4C200.958 121.4 236.358 114.4 236.358 151.1C236.358 187.8 192.158 285.7 192.158 285.7H78.9579Z"
+          fill="rgba(190,190,190,1)"></path>
+        <style>
+          .tooltip-horizontal-scroll-icon_hand {
+            animation: tooltip-horizontal-scroll-icon_anim-scroll-hand 2s infinite
+          }
 
-  <section class="guarantee">
-    <div class="container">
-        <h1 class="guarantee__title _title">
-            <span> Берем на себя гарантии и прописываем </span> их в договоре:
-        </h1>
-        <div class="guarantee__items">
-            <div class="guarantee__item relative">
-                <img class="guarantee__item-img _img" src="../../images/guarantee-1.webp" alt="">
-                <div class="overlay"></div>
-                <h3 class="guarantee__item-title  relative">
-                    Гарантия фиксированной стоимости
-                </h3>
-                <p class="guarantee__item-text relative">
-                    Согласованная расчетная стоимость останетсянеизменной. В случае если вы
-                    захотите поменятьматериалы или дополнить проект, мы пересчитаеми
-                    согласуем обновленную смету
+          .tooltip-horizontal-scroll-icon_card {
+            animation: tooltip-horizontal-scroll-icon_anim-scroll-card 2s infinite
+          }
 
-                </p>
-            </div>
-            <div class="guarantee__item relative">
-                <img class="guarantee__item-img _img" src="../../images/guarantee-2.webp" alt="">
-                <div class="overlay"></div>
-                <h3 class="guarantee__item-title relative">
-                    Гарантия соблюдения сроков
-                </h3>
-                <p class="guarantee__item-text relative">
-                    Несем ответственность за соблюдение сроков.
-                </p>
-            </div>
-            <div class="guarantee__item relative">
-                <img class="guarantee__item-img _img" src="../../images/guarantee-3.webp" alt="">
-                <div class="overlay"></div>
-                <h3 class="guarantee__item-title relative">
-                    Пожизненная гарантия на металлокаркас
-                </h3>
-                <p class="guarantee__item-text relative">
-                    Мы предоставляем пожизненную гарантию на металлокаркас наших
-                    лестниц, обеспечиваемую использованием премиальных
-                    материалов, передовыми технологиями
-                    производства, строгим контролем
-                    качества и надёжными гарантийными
-                    бязательствами
-                </p>
-            </div>
-            <div class="guarantee__item relative">
-                <img class="guarantee__item-img _img" src="../../images/guarantee-4.webp" alt="">
-                <div class="overlay"></div>
-                <h3 class="guarantee__item-title relative">
-                    Гарантия на отделку 2 года
+          @keyframes tooltip-horizontal-scroll-icon_anim-scroll-hand {
+            0% {
+              transform: translateX(80px) scale(1);
+              opacity: 0
+            }
 
-                </h3>
-                <p class="guarantee__item-text relative">
-                    За этот период лестница будет находиться
-                    во всех возможных средах: от
-                    повышенной влажности до перепада
-                    температур
-                </p>
-            </div>
+            10% {
+              transform: translateX(80px) scale(1);
+              opacity: 1
+            }
 
+            20%,
+            60% {
+              transform: translateX(175px) scale(.6);
+              opacity: 1
+            }
 
+            80% {
+              transform: translateX(5px) scale(.6);
+              opacity: 1
+            }
 
+            to {
+              transform: translateX(5px) scale(.6);
+              opacity: 0
+            }
+          }
 
+          @keyframes tooltip-horizontal-scroll-icon_anim-scroll-card {
 
-        </div>
+            0%,
+            60% {
+              transform: translateX(0)
+            }
+
+            80%,
+            to {
+              transform: translateX(-240px)
+            }
+          }
+        </style>
+      </svg>
     </div>
+    <div class="section-16__items">
+      <div class="section-16__item">
+        <img class="section-16__item-img _img" src="../../images/section-16-1.webp" alt="">
+        <div class="overlay"></div>
+        <div class="section-16__item-inner">
+          <h3 class="section-16__item-title ">
+            Гарантия фиксированной стоимости
+          </h3>
+          <p class="section-16__item-text">
+            Согласованная расчетная стоимость останетсянеизменной. В случае если вы
+            захотите поменятьматериалы или дополнить проект, мы пересчитаеми
+            согласуем обновленную смету
+          </p>
+        </div>
+      </div>
+      <div class="section-16__item">
+        <img class="section-16__item-img _img" src="../../images/section-16-2.webp" alt="">
+        <div class="overlay"></div>
+        <div class="section-16__item-inner">
+          <h3 class="section-16__item-title">
+            Гарантия соблюдения сроков
+          </h3>
+          <p class="section-16__item-text">
+            Несем ответственность за соблюдение сроков.
+          </p>
+        </div>
+      </div>
+      <div class="section-16__item">
+        <img class="section-16__item-img _img" src="../../images/section-16-3.webp" alt="">
+        <div class="overlay"></div>
+        <div class="section-16__item-inner">
+          <h3 class="section-16__item-title">
+            Пожизненная гарантия на металлокаркас
+          </h3>
+          <p class="section-16__item-text">
+            Мы предоставляем пожизненную гарантию на металлокаркас наших
+            лестниц, обеспечиваемую использованием премиальных
+            материалов, передовыми технологиями
+            производства, строгим контролем
+            качества и надёжными гарантийными
+            бязательствами
+          </p>
+        </div>
+      </div>
+      <div class="section-16__item">
+        <img class="section-16__item-img _img" src="../../images/section-16-4.webp" alt="">
+        <div class="overlay"></div>
+        <div class="section-16__item-inner">
+          <h3 class="section-16__item-title">
+            Гарантия на отделку 2 года
+          </h3>
+          <p class="section-16__item-text">
+            За этот период лестница будет находиться
+            во всех возможных средах: от
+            повышенной влажности до перепада
+            температур
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 
