--- a/app/html/blocks/section-11.html
+++ b/app/html/blocks/section-11.html
@@ -77,7 +77,7 @@
         </div>
       </div>
       <form class="section-11__form form-submit" action="#" method="POST" enctype="multipart/form-data">
-        <input type="hidden" name="from" value="Получить подборку проектов">
+        <input type="hidden" name="from" value="Закажите выезд инженера на замер">
         <input type="hidden" name="newToken" value="<?php echo (rand(10000, 99999)) ?>">
         <h3 class="section-11__form-title">
           Закажите выезд инженера на замер
@@ -95,7 +95,7 @@
           <input class="section-11__form-input _input" type="text" placeholder="Имя" name="name">
           <input class="section-11__form-input _input" type="number" placeholder="Номер телефона" name="phone">
           <button type="submit" class="section-11__from-btn _main-btn">
-            заказать
+            Заказать
           </button>
           <label class="section-11__checkbox-block checkbox-block">
             <input type="checkbox" name="access" required checked>
