--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -19,6 +19,7 @@
   @@include('../blocks/section-14.html')
   @@include('../blocks/section-15.html')
   @@include('../blocks/section-16.html')
+  @@include('../blocks/section-17.html')
 
 
 
