added section-19 and change filters script

--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -20,7 +20,8 @@
   @@include('../blocks/section-15.html')
   @@include('../blocks/section-16.html')
   @@include('../blocks/section-17.html')
-
+  <!-- section-18 делает Алим -->
+  @@include('../blocks/section-19.html')
 
 
 
