--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -20,8 +20,10 @@
   @@include('../blocks/section-15.html')
   @@include('../blocks/section-16.html')
   @@include('../blocks/section-17.html')
-  <!-- section-18 делает Алим -->
+  @@include('../blocks/section-18.html')
   @@include('../blocks/section-19.html')
+  @@include('../blocks/section-20.html')
+  @@include('../blocks/section-21.html')
 
 
 
