--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -24,6 +24,9 @@
   @@include('../blocks/section-19.html')
   @@include('../blocks/section-20.html')
   @@include('../blocks/section-21.html')
+  @@include('../blocks/section-22.html')
+  @@include('../blocks/section-23.html')
+  @@include('../blocks/section-24.html')
 
 
 
