added sections 25/26, footer. Added map script

--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -27,6 +27,8 @@
   @@include('../blocks/section-22.html')
   @@include('../blocks/section-23.html')
   @@include('../blocks/section-24.html')
+  @@include('../blocks/section-25.html')
+  @@include('../blocks/section-26.html')
 
 
 
