--- a/app/html/blocks/footer.html
+++ b/app/html/blocks/footer.html
@@ -7,7 +7,7 @@
           Лестницы <br>для всех
         </p>
       </a>
-      <a class="footer__policy" href="#">
+      <a class="footer__policy" href="#politics" data-fancybox="">
         Политика конфиденциальности
       </a>
       <a class="footer__mail" href="mailto:sales@stairs.ru">
@@ -21,7 +21,7 @@
             +7 495 106 00 49
           </p>
         </a>
-        <a href="#" class="footer__phone-link _link">
+        <a  href="#callback" data-fancybox="" class="footer__phone-link _link">
           Перезвоните нам
         </a>
       </div>
@@ -29,6 +29,7 @@
   </div>
 </footer>
 
+@@include('modals.html')
 
 
 
