--- a/app/html/blocks/header.html
+++ b/app/html/blocks/header.html
@@ -47,7 +47,7 @@
               <p class="header__item-point">
                 Сейчас работаем
               </p>
-              <a href="#" class="header__item-link _link">
+              <a href="#callback" data-fancybox="" class="header__item-link _link">
                 Перезвоните нам
               </a>
             </div>
