--- a/app/html/blocks/section-13.html
+++ b/app/html/blocks/section-13.html
@@ -32,7 +32,7 @@
             @@include('../../images/icons/check.svg')
           </span>
           <p>
-            Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики конфиденциальности</a>
+            Я принимаю условия <a data-fancybox="" class="_link"  href="#politics">политики конфиденциальности</a>
           </p>
         </label>
       </div>
