--- a/app/html/blocks/section-24.html
+++ b/app/html/blocks/section-24.html
@@ -28,7 +28,7 @@
             @@include('../../images/icons/check.svg')
           </span>
           <p>
-            Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики
+            Я принимаю условия <a class="_link"  href="#politics" data-fancybox="">политики
               конфиденциальности</a>
           </p>
         </label>
