--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
               <p class="header__item-point">
                 Сейчас работаем
               </p>
-              <a href="#" class="header__item-link _link">
+              <a href="#callback" data-fancybox="" class="header__item-link _link">
                 Перезвоните нам
               </a>
             </div>
@@ -1458,7 +1458,7 @@
 
             </span>
             <p>
-              Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики
+              Я принимаю условия <a data-fancybox="" class="_link"  href="#politics">политики
                 конфиденциальности</a>
             </p>
           </label>
@@ -1673,7 +1673,7 @@
 
           </span>
           <p>
-            Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики конфиденциальности</a>
+            Я принимаю условия <a data-fancybox="" class="_link"  href="#politics">политики конфиденциальности</a>
           </p>
         </label>
       </div>
@@ -3513,7 +3513,7 @@
 
           </span>
           <p>
-            Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики
+            Я принимаю условия <a data-fancybox="" class="_link"  href="#politics">политики
               конфиденциальности</a>
           </p>
         </label>
@@ -3742,7 +3742,7 @@
 
         </span>
         <p>
-          Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики конфиденциальности</a>
+          Я принимаю условия <a data-fancybox="" class="_link"  href="#politics">политики конфиденциальности</a>
         </p>
       </label>
     </form>
@@ -3926,7 +3926,7 @@
 
           </span>
           <p>
-            Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики
+            Я принимаю условия <a class="_link"  href="#politics" data-fancybox="">политики
               конфиденциальности</a>
           </p>
         </label>
@@ -4192,7 +4192,7 @@
           Лестницы <br>для всех
         </p>
       </a>
-      <a class="footer__policy" href="#">
+      <a class="footer__policy" href="#politics" data-fancybox="">
         Политика конфиденциальности
       </a>
       <a class="footer__mail" href="mailto:sales@stairs.ru">
@@ -4221,7 +4221,7 @@
             +7 495 106 00 49
           </p>
         </a>
-        <a href="#" class="footer__phone-link _link">
+        <a  href="#callback" data-fancybox="" class="footer__phone-link _link">
           Перезвоните нам
         </a>
       </div>
@@ -4229,6 +4229,67 @@
   </div>
 </footer>
 
+<div class="modal__callback modal" style="display: none;" id="callback">
+    <form action="#" class="modal__callback-form form-submit" method="POST" enctype="multipart/form-data">
+      <input type="hidden" name="from" value="Наш специалист свяжется с вами в ближайшее время">
+      <input type="hidden" name="newToken" value="<?php echo (rand(10000, 99999)) ?>">
+      <h2 class="modal__callback-title">
+        Наш специалист свяжется с вами в ближайшее время
+      </h2>
+      <div class="modal__callback-inner">
+        <input class="modal__callback-inp" type="text" name="name" placeholder="Имя" required>
+        <input class="modal__callback-inp" type="tel" name="phone" placeholder="Номер телефона" required>
+        <button type="submit" class="modal__callback-btn _main-btn">
+          Отправить
+        </button>
+        <label class="modal__checkbox-block checkbox-block">
+            <input type="checkbox" name="access" required checked>
+            <span>
+              <svg width="10" height="8" viewBox="0 0 10 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M9.24334 2.50072L5.00034 6.74572C4.60934 7.13672 3.97634 7.13672 3.58634 6.74572L0.757344 3.91372C0.367344 3.52372 0.367344 2.89672 0.757344 2.50072C1.14834 2.10672 1.78134 2.10672 2.17234 2.50072L4.29334 4.62372L7.82834 1.08772C8.21934 0.694719 8.85234 0.694719 9.24334 1.08772C9.63334 1.48372 9.63334 2.10672 9.24334 2.50072Z" fill="#EB6C2D"/>
+</svg>
+
+            </span>
+            <p>
+              Я принимаю условия <a data-fancybox="" class="_link"  href="#politics" data-fancybox="">политики конфиденциальности</a>
+            </p>
+          </label>
+      </div>
+    </form>
+  </div>
+  <div id="politics" style="display: none;" class="politics-modal fancybox__content">
+    <div class="modal__container">
+      <h3 class="politics-modal__title">Политика конфиденциальности</h3>
+      <div class="politics-modal__text">
+        <p>
+          Администрация данного Сайта не&nbsp;может передать или раскрыть информацию предоставленную пользователем
+          (далее Пользователь) при регистрации и&nbsp;использовании функций сайта третьим лицам, кроме случаев,
+          описанных законодательством страны, на&nbsp;территории которой пользователь ведет свою деятельность.
+        </p>
+        <p>
+          Для регистрации на&nbsp;сайте, пользователь обязан внести некоторую персональную информацию. Для проверки
+          предоставленных данных, сайт оставляет за&nbsp;собой право потребовать доказательства идентичности
+          в&nbsp;онлайн или офлайн режимах.
+        </p>
+        <p>
+          Сайт использует личную информацию Пользователя для обслуживания и&nbsp;для улучшения качества
+          предоставляемых услуг. Часть персональной информации может быть предоставлена банку или платежной системе,
+          в&nbsp;случае, если предоставление этой информации обусловлено процедурой перевода средств платежной
+          системе, услугами которой Пользователь желает воспользоваться.
+        </p>
+        <p>
+          Сайт прилагает все усилия для сбережения в&nbsp;сохранности личных данных Пользователя.
+          Личная информация может быть раскрыта в&nbsp;случаях, описанных законодательством, либо
+          когда администрация сочтет подобные действия необходимыми для соблюдения юридической процедуры, судебного
+          распоряжения или легального процесса необходимого для работы Пользователя с&nbsp;Сайтом.
+        </p>
+        <p>
+          В&nbsp;других случаях, ни&nbsp;при каких условиях, информация, которую Пользователь передает Сайту,
+          не&nbsp;будет раскрыта третьим лицам.
+        </p>
+      </div>
+    </div>
+  </div>
 
 
 
