--- a/app/html/blocks/section-11.html
+++ b/app/html/blocks/section-11.html
@@ -93,7 +93,7 @@
         </div>
         <div class="section-11__form-inner">
           <input class="section-11__form-input _input" type="text" placeholder="Имя" name="name">
-          <input class="section-11__form-input _input" type="number" placeholder="Номер телефона" name="phone">
+          <input class="section-11__form-input _input" type="tel" placeholder="Номер телефона" name="phone">
           <button type="submit" class="section-11__from-btn _main-btn">
             Заказать
           </button>
