--- a/app/html/blocks/section-20.html
+++ b/app/html/blocks/section-20.html
@@ -12,7 +12,7 @@
       </p>
       <div class="section-11__form-inner">
         <input class="section-11__form-input _input" type="text" placeholder="Имя" name="name">
-        <input class="section-11__form-input _input" type="number" placeholder="Номер телефона" name="phone">
+        <input class="section-11__form-input _input" type="tel" placeholder="Номер телефона" name="phone">
         <button type="submit" class="section-11__from-btn _main-btn">
           Получить индивидуальную
           разработку проекта
